# superajan12

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json
apps/desktop/src/: App.tsx  api.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/: ACTIVE_EXECUTION_QUEUE.md  HANDOFF.md  MASTER_ROADMAP.md  PRODUCTION_CHECKLIST.md  RELEASE.md  ROADMAP.md  RUNBOOK.md  STATUS.md  draft-pr-fallback.md
docs/source-deep-dives/: BINANCE_FUTURES.md  COINBASE.md  OKX.md
src/: httpx.py  pydantic.py  pydantic_settings.py  tenacity.py  uvicorn.py
src/fastapi/: __init__.py  app.py  responses.py  testclient.py
src/pytest/: __init__.py  _api.py  _runner.py
src/rich/: console.py  table.py
src/superajan12/: approval.py  audit.py  backend_api.py  backend_server.py  cli.py  config.py  execution_guard.py  health.py  live_connector.py  market_state.py  model_registry.py  models.py  reference_status.py  reporting.py  runtime.py  safety.py  storage.py
src/superajan12/agents/: __init__.py  (+7 more)
tests/: test_audit.py  test_backend_api.py  test_capital_and_live_connector.py  test_execution_guard.py  test_execution_storage.py  test_live_connector.py  test_market_state.py  test_model_registry.py  test_quality_agents.py  test_reference_status.py  test_reporting.py  test_risk_engine.py  test_safety.py  test_scanner_market_state.py  test_shadow_and_signals.py  test_storage.py  test_storage_market_state.py  test_storage_model_history.py
(+2 files in other folders)
